# caldav-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: client.cpp.9F9FD135C16389B8.idx  client.h.45BE444CCF9D2060.idx  test.cpp.A15F5A97A0870582.idx
include/caldav/: calendar.h  client.h  event.h  parseical.h  timeutils.hpp  todo.h
src/: calendar.cpp  client.cpp  parseical.cpp
tests/: test.cpp
